[build-system]
requires = ["setuptools>=61.0","setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "simple-build-dgcode"
dynamic = ["version"]
authors = [
  { name="Thomas Kittelmann", email="thomas.kittelmann@ess.eu" },
]
description = "The Geant4-based coding framework originating in the ESS Detector Group, provided as a simplebuild bundle of packages."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
]
dependencies = [
    'simple-build-system >= 1.2.6'
]

[project.optional-dependencies]
recommended = [
    'numpy',
    'ncrystal',
    'matplotlib'
]
all = [
    'numpy',
    'ncrystal',
    'matplotlib',
    'ase',
    'gemmi',
    'spglib',
    'pymatgen',
    'scipy',
    'pandas',
    'PySimpleGUI-4-foss'
]

[project.urls]
"Homepage" = "https://mctools.github.io/simplebuild-dgcode/"
"Bug Tracker" = "https://github.com/mctools/simplebuild-dgcode/issues"

[project.scripts]
dgcode_newsimproject = "simplebuild_dgcode._cli:newsimproject"
