[build-system]
requires = ["setuptools>=74.0","setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "simple-build-dgcode"
dynamic = ["version"]
authors = [
  { name="Thomas Kittelmann", email="thomas.kittelmann@ess.eu" },
]
description = "The Geant4-based coding framework originating in the ESS Detector Group, provided as a simplebuild bundle of packages."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
]
dependencies = [
    'simple-build-system >= 1.7.0'
]

[project.optional-dependencies]
recommended = [
    'numpy',
    'ncrystal>=4.1.6',
    'mcpl>=2.0.0',
    'matplotlib'
]
all = [
    'numpy',
    'ncrystal[all]>=4.1.6',
    'mcpl>=2.0.0',
    'matplotlib',
    'scipy',
    'pandas',
    'PySimpleGUI-4-foss'
]

[project.urls]
"Homepage" = "https://mctools.github.io/simplebuild-dgcode/"
"Bug Tracker" = "https://github.com/mctools/simplebuild-dgcode/issues"

[project.scripts]
dgcode_newsimproject = "simplebuild_dgcode._cli:newsimproject"
